--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="main-container">
 
     <section id="button-container"
-             style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+             style="display: flex; justify-content: space-between; align-items: center; padding: 11px;">
       <p>MyPage - 강좌</p>
       <button style="border: 1px solid #000; padding: 6px 18px; border-radius: 10px; background: #D9D9D9;">
         등록
@@ -20,7 +20,7 @@
     </section>
 
     <section class="card-container">
-      <div id="cards-${i} sample" title="클릭시 디테일 페이지로 전이" role="button" style="height: 330px; width: 260px; border: 1px solid #000; padding: 10px;
+      <a id="cards-${i} sample" href="./page/detail/detail.html" title="클릭시 디테일 페이지로 전이" role="button" style="height: 330px; width: 260px; border: 1px solid #000; padding: 10px;
       cursor: pointer;
   border-radius: 14px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <!--        썸네일     -->
@@ -51,7 +51,7 @@
           </div>
 
         </div>
-      </div>
+      </a>
     </section>
 
 
