--- a/index.html
+++ b/index.html
@@ -19,46 +19,48 @@
       </button>
     </section>
 
-    <section class="card-container">
-      <a id="cards-${i} sample" href="./page/detail/detail.html" title="클릭시 디테일 페이지로 전이" role="button" style="height: 330px; width: 260px; border: 1px solid #000; padding: 10px;
-      cursor: pointer;
-  border-radius: 14px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <!--        썸네일     -->
-        <div class="card-thumbnail" style="width: 95%; height: 65%; background: #D9D9D9; border-radius: 10px;">
-          이곳이 이미지 넣는 곳
-        </div>
+    <section id="card-container">
 
-        <!--        카드 설명     -->
-        <div class="text"
-             style="width: 100%; height: 35%; ">
-          <div style="padding: 10px; text-align: start">
-            <div
-                style="width: 100%; height: auto; display: flex; justify-content: start;align-items: center; gap:10px;">
-              <h5>타이틀: </h5>
-              <p>파이썬 강좌1</p>
-            </div>
-
-            <div
-                style="width: 100%; height: auto; display: flex; justify-content: start;align-items: center; gap:10px;">
-              <h5>강좌명: </h5>
-              <p>code - code</p>
-            </div>
-            <div
-                style="width: 100%; height: auto; display: flex; justify-content: start;align-items: center; gap:10px;">
-              <h5>난이도: </h5>
-              <p>하</p>
-            </div>
-          </div>
-
-        </div>
-      </a>
     </section>
 
 
+  </div>
+
+  <div id="editModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3>강의 생성 모달 폼</h3>
+        <button class="modal-close">&times;</button>
+      </div>
+      <form id="form" class="modal-form">
+        <input type="hidden" id="course">
+        <div class="form-group">
+          <label for="lecture">강좌명</label>
+          <input type="text" id="lecture" class="form-input" required>
+        </div>
+        <div class="form-group">
+          <label for="category">카테고리</label>
+          <input type="number" id="category" class="form-input" required>
+        </div>
+        <div class="form-group">
+          <label for="level">난이도</label>
+          <input type="number" id="level" class="form-input" required>
+        </div>
+        <div class="form-group">
+          <label for="introduce">간단 소개글</label>
+          <input type="number" id="introduce" class="form-input" required>
+        </div>
+        <div class="modal-actions">
+          <button type="button" class="cancel-btn">취소</button>
+          <button type="submit" class="save-btn">저장</button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
 <script type="module" src="./src/js/layout/includeHeader.js"></script>
 <script type="module" src="./src/js/layout/includeSidebar.js"></script>
+<script type="module" src="src/js/ui/card.js"></script>
 </body>
 </html>
