강의 생성 모달 추가 안건 완

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <section id="button-container"
              style="display: flex; justify-content: space-between; align-items: center; padding: 11px;">
       <p>MyPage - 강좌</p>
-      <button style="border: 1px solid #000; padding: 6px 18px; border-radius: 10px; background: #D9D9D9;">
+      <button
+          style="border: 1px solid #000; padding: 6px 18px; border-radius: 10px; background: #D9D9D9; cursor: pointer;"
+          class="modal-toggle-btn"
+          data-modal-target="createLectureModal"
+          id="lecture-create">
         등록
       </button>
     </section>
@@ -26,41 +30,14 @@
 
   </div>
 
-  <div id="editModal" class="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3>강의 생성 모달 폼</h3>
-        <button class="modal-close">&times;</button>
-      </div>
-      <form id="form" class="modal-form">
-        <input type="hidden" id="course">
-        <div class="form-group">
-          <label for="lecture">강좌명</label>
-          <input type="text" id="lecture" class="form-input" required>
-        </div>
-        <div class="form-group">
-          <label for="category">카테고리</label>
-          <input type="number" id="category" class="form-input" required>
-        </div>
-        <div class="form-group">
-          <label for="level">난이도</label>
-          <input type="number" id="level" class="form-input" required>
-        </div>
-        <div class="form-group">
-          <label for="introduce">간단 소개글</label>
-          <input type="number" id="introduce" class="form-input" required>
-        </div>
-        <div class="modal-actions">
-          <button type="button" class="cancel-btn">취소</button>
-          <button type="submit" class="save-btn">저장</button>
-        </div>
-      </form>
-    </div>
-  </div>
+  <div class="modals"></div>
+
 </div>
 
 <script type="module" src="./src/js/layout/includeHeader.js"></script>
 <script type="module" src="./src/js/layout/includeSidebar.js"></script>
 <script type="module" src="src/js/ui/card.js"></script>
+<script type="module" src="src/js/ui/createLectureModal.js"></script>
+<script type="module" src="src/js/utils/lecture-create-modal.js"></script>
 </body>
 </html>
