--- a/index.html
+++ b/index.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title></title>
-  <link rel="stylesheet" href="./src/css/global.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link rel="stylesheet" href="./src/css/global.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="main-container">
+        <section
+          id="button-container"
+          style="
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 11px;
+          "
+        >
+          <p>MyPage - 강좌</p>
+          <button
+            style="
+              border: 1px solid #000;
+              padding: 6px 18px;
+              border-radius: 10px;
+              background: #d9d9d9;
+              cursor: pointer;
+            "
+            class="modal-toggle-btn"
+            data-modal-target="createLectureModal"
+            id="lecture-create"
+          >
+            등록
+          </button>
+        </section>
 
-<div class="container">
-  <div class="main-container">
+        <section id="card-container"></section>
+      </div>
 
-    <section id="button-container"
-             style="display: flex; justify-content: space-between; align-items: center; padding: 11px;">
-      <p>MyPage - 강좌</p>
-      <button
-          style="border: 1px solid #000; padding: 6px 18px; border-radius: 10px; background: #D9D9D9; cursor: pointer;"
-          class="modal-toggle-btn"
-          data-modal-target="createLectureModal"
-          id="lecture-create">
-        등록
-      </button>
-    </section>
+      <div class="modals"></div>
+    </div>
 
-    <section id="card-container">
-
-    </section>
-
-
-  </div>
-
-  <div class="modals"></div>
-
-</div>
-
-<script type="module" src="./src/js/layout/includeHeader.js"></script>
-<script type="module" src="./src/js/layout/includeSidebar.js"></script>
-<script type="module" src="src/js/ui/card.js"></script>
-<script type="module" src="src/js/ui/createLectureModal.js"></script>
-<script type="module" src="src/js/utils/lecture-create-modal.js"></script>
-</body>
+    <script type="module" src="./src/js/layout/includeHeader.js"></script>
+    <script type="module" src="./src/js/layout/includeSidebar.js"></script>
+    <script type="module" src="src/js/ui/card.js"></script>
+    <script type="module" src="src/js/ui/createLectureModal.js"></script>
+    <script type="module" src="src/js/utils/lecture-create-modal.js"></script>
+    <script type="module" src="src/js/ui/previewModal.js"></script>
+    <script type="module" src="src/js/utils/preview-modal.js"></script>
+  </body>
 </html>
