파일 추가함

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 <script type="module" src="./src/js/layout/includeSidebar.js"></script>
 <script type="module" src="src/js/ui/card.js"></script>
 <script type="module" src="src/js/ui/createLectureModal.js"></script>
-<script type="module" src="src/js/utils/lecture-create-modal.js"></script>
+<script type="module" src="src/js/utils/openModal.js"></script>
 </body>
 </html>
