컴포넌트 화

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
 <script type="module" src="./src/js/layout/includeHeader.js"></script>
 <script type="module" src="./src/js/layout/includeSidebar.js"></script>
-<script type="module" src="src/js/ui/card.js"></script>
-<script type="module" src="src/js/ui/createLectureModal.js"></script>
+<script type="module" src="src/js/ui/card/card.js"></script>
+<script type="module" src="src/js/ui/createLectureModal/createLectureModal.js"></script>
 <script type="module" src="src/js/utils/openModal.js"></script>
 </body>
 </html>
