컴포넌트 화 누락 된거 다시 올림..

--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -36,9 +36,9 @@
         <label for="thumbnail">썸네일 이미지</label>
         <button id="thumbnail-notice" class="form-input" type="button" style="position: relative; text-align: left;">
           강의 소개하는 커버 이미지를 등록해주세요.
-          <div style="position: absolute; right: 20px; top:0.75rem; color: black;">
+          <span style="position: absolute; right: 20px; top:0.75rem; color: black;">
             파일 불러오기
-          </div>
+          </span>
         </button>
         <input id="thumbnail" type="file" accept="image/*">
       </div>
