카테고리별 리스트 업

--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
 <script type="module" src="src/js/ui/createLectureModal/createLectureModal.js"></script>
 <script type="module" src="src/js/utils/openModal.js"></script>
 <script type="module" src="src/js/ui/category/category.js"></script>
+<script type="module" src="src/js/ui/card-list/cardList.js"></script>
 </body>
 </html>
