--- a/src/js/ui/card/cardTemplate.html
+++ b/src/js/ui/card/cardTemplate.html
@@ -3,11 +3,13 @@
     <img src="" alt="thumbnail">
   </div>
   <div class="card-text">
-    <div class="card-row"><h5>강좌명:</h5>
+    <div class="card-row">
       <p class="lecture-name"></p></div>
-    <div class="card-row"><h5>소개글:</h5>
+    <div class="card-row">
       <p class="introduce"></p></div>
-    <div class="card-row"><h5>난이도:</h5>
-      <p class="level"></p></div>
+    <div class="card-row-level-category">
+      <p class="level"></p>
+      <p class="category"></p></div>
+
   </div>
 </button>
