--- a/src/js/ui/card/cardTemplate.html
+++ b/src/js/ui/card/cardTemplate.html
@@ -1,13 +1,24 @@
-<button class="card modal-toggle-btn" title="card modal-toggle-btn" role="button">
+<button
+  class="card modal-toggle-btn"
+  title="card modal-toggle-btn"
+  role="button"
+  data-modal-target="detailLecture"
+>
   <div class="card-thumbnail">
-    <img src="" alt="thumbnail">
+    <img src="" alt="thumbnail" />
   </div>
   <div class="card-text">
-    <div class="card-row"><h5>강좌명:</h5>
-      <p class="lecture-name"></p></div>
-    <div class="card-row"><h5>소개글:</h5>
-      <p class="introduce"></p></div>
-    <div class="card-row"><h5>난이도:</h5>
-      <p class="level"></p></div>
+    <div class="card-row">
+      <h5>강좌명:</h5>
+      <p class="lecture-name"></p>
+    </div>
+    <div class="card-row">
+      <h5>소개글:</h5>
+      <p class="introduce"></p>
+    </div>
+    <div class="card-row">
+      <h5>난이도:</h5>
+      <p class="level"></p>
+    </div>
   </div>
 </button>
