preview 최종 수정 완료

--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -59,7 +59,12 @@
             파일 불러오기
           </span>
         </button>
-        <input id="thumbnail" type="file" accept="image/*" />
+        <input
+          id="thumbnail"
+          type="file"
+          accept="image/*"
+          style="display: none"
+        />
       </div>
 
       <div
