--- a/index.html
+++ b/index.html
@@ -1,38 +1,129 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title></title>
   <link rel="stylesheet" href="./src/css/global.css">
+
 </head>
+
 <body>
 
-<div class="container">
-  <div class="main-container">
-
-    <section id="button-container"
-             style="display: flex; justify-content: space-between; align-items: center; padding: 11px;">
-      <p>MyPage - 강좌</p>
-      <button
-         
-          class="modal-toggle-btn"
-          data-modal-target="createLectureModal"
-          id="lecture-create">
-        등록
+  <section id="cards-section" class="cards-section">
+    <!-- 섹션 헤더(제목 + 버튼) -->
+    <header class="cards-header">
+      <h1 class="main-title">My 강의</h1>
+      <button class="create-modal-toggle-btn modal-toggle-btn" data-modal-target="createLectureModal"
+        id="lecture-create">
+        강의 등록하기
       </button>
-    </section>
+    </header>
 
-    <section id="card-container">
-      
-    </section>
+    <!-- 카드 리스트 컨테이너 -->
+    <div id="card-container" class="cards-grid"></div>
+
+    <!-- 빈 페이지 카드 -->
+    <div class="card card-empty" id="card-empty" role="status" aria-live="polite" aria-hidden="true">
+      <div class="card-empty__icon" aria-hidden="true"></div>
+      <div class="card-empty__text">
+        <h3 class="card-empty__title">등록된 강의가 없습니다</h3>
+        <p class="card-empty__desc">상단 ‘강의 등록하기’ 버튼을 눌러<br>신규 강의를 등록해보세요.</p>
+      </div>
+    </div>
+  </section>
+
+
+  
+  <div class="container">
+    <div class="main-container">
+      <!-- <section id="button-container"
+        style="display: flex; justify-content: space-between; align-items: center; padding: 11px;">
+        <p class="main-title">My 강의</p>
+        <button class="create-modal-toggle-btn modal-toggle-btn" data-modal-target="createLectureModal"
+          id="lecture-create">
+          강의 등록하기
+        </button>
+      </section> -->
+
+      <section id="card-container"></section>
+
+      <!-- 빈 페이지 카드: 카드 리스트에 포함되어 동일한 그리드 규칙을 따름 
+      <div class="card card-empty" style="background-color: transparent;" id="card-empty" role="status"
+        aria-live="polite" aria-hidden="true">
+        <div class="card-empty__icon" aria-hidden="true"></div>
+        <div class="card-empty__text">
+          <h3 class="card-empty__title">등록된 강의가 없습니다</h3>
+          <p class="card-empty__desc">상단 ‘강의 등록하기’ 버튼을 눌러<br> 신규 강의를 등록해보세요.</p>
+        </div>
+      </div> -->
+    </div>
   </div>
-  <div class="modals"></div>
-</div>
 
-<script type="module" src="./src/js/layout/includeSidebar.js"></script>
-<script type="module" src="src/js/ui/card/card.js"></script>
-<script type="module" src="src/js/ui/createLectureModal/createLectureModal.js"></script>
-<script type="module" src="src/js/utils/openModal.js"></script>
+
+
+  
+  <script type="module" src="./src/js/layout/includeSidebar.js"></script>
+  <script type="module" src="src/js/ui/card/card.js"></script>
+  <script type="module" src="src/js/ui/createLectureModal/createLectureModal.js"></script>
+  <script type="module" src="src/js/utils/openModal.js"></script>
+  <div class="modals"></div>
+
+
+
+  <script>
+    // 카드 추가/삭제 시마다 호출
+    function toggleEmptyCard() {
+      const container = document.getElementById('card-container');
+      const emptyCard = document.getElementById('card-empty');
+      // .card 중에서 빈 카드 자신은 제외하고 실제 카드만 카운트
+      const realCards = Array.from(container.querySelectorAll('.card'))
+        .filter(el => !el.classList.contains('card-empty'));
+
+      if (realCards.length === 0) {
+        // 빈 카드가 없으면 맨 앞에 삽입
+        if (!emptyCard.parentElement) container.prepend(emptyCard);
+        emptyCard.setAttribute('aria-hidden', 'false');
+      } else {
+        emptyCard.setAttribute('aria-hidden', 'true');
+      }
+    }
+
+
+    function toggleEmptyCard() {
+      const container = document.getElementById('card-container'); // .cards-grid
+      const emptyCard = document.getElementById('card-empty');
+      const realCards = [...container.querySelectorAll('.card')].filter(c => !c.classList.contains('card-empty'));
+      const isEmpty = realCards.length === 0;
+
+      if (isEmpty) {
+        if (!emptyCard.parentElement) container.prepend(emptyCard); // 리스트 안 첫 칸
+        emptyCard.setAttribute('aria-hidden', 'false');
+        container.classList.add('is-empty');   // 핵심: 중앙 배치
+      } else {
+        emptyCard.setAttribute('aria-hidden', 'true');
+        container.classList.remove('is-empty');
+      }
+    }
+    toggleEmptyCard();
+    // new MutationObserver(toggleEmptyCard).observe(document.getElementById('card-container'), { childList: true });
+
+
+
+
+    // // 초기 및 변경 감지
+    // toggleEmptyCard();
+    // const obs = new MutationObserver(toggleEmptyCard);
+    // obs.observe(document.getElementById('card-container'), { childList: true });
+
+
+
+
+  </script>
+
+
+
 </body>
+
 </html>
