--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <script type="module" src="./src/js/layout/includeSidebar.js"></script>
 <script type="module" src="src/js/ui/card/card.js"></script>
 <script type="module" src="src/js/ui/createLectureModal/createLectureModal.js"></script>
+<script type="module" src="src/js/ui/detailLectureModal/detailLectureModal.js"></script>
 <script type="module" src="src/js/utils/openModal.js"></script>
 <script type="module" src="src/js/ui/category/category.js"></script>
 <script type="module" src="src/js/ui/card-list/cardList.js"></script>
