--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -5,28 +5,28 @@
       <button class="modal-close">&times;</button>
     </div>
     <form id="create-form" class="modal-form">
-      <input type="hidden" id="course" />
+      <input type="hidden" id="course"/>
       <div class="form-group">
         <label for="lecture-name">강의명</label>
         <input
-          type="text"
-          id="lecture-name"
-          class="form-input"
-          placeholder="강의명을 입력해주세요."
-          required
+            type="text"
+            id="lecture-name"
+            class="form-input"
+            placeholder="강의명을 입력해주세요."
+            required
         />
       </div>
       <div class="form-group">
         <label for="introduce">간단 소개글</label>
         <input
-          type="text"
-          id="introduce"
-          class="form-input"
-          placeholder="설명 글에 소개할 글을 간단하게 작성해주세요."
-          required
+            type="text"
+            id="introduce"
+            class="form-input"
+            placeholder="설명 글에 소개할 글을 간단하게 작성해주세요."
+            required
         />
       </div>
-      <div style="display: flex; gap: 10px">
+      <div style="display: flex; ">
         <div class="form-group" style="width: 100%">
           <label for="category">카테고리</label>
           <select name="categories" id="category" class="form-input">
@@ -45,31 +45,31 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="thumbnail">썸네일 이미지</label>
+        <label for="thumbnail">미디어 파일</label>
         <button
-          id="thumbnail-notice"
-          class="form-input"
-          type="button"
-          style="position: relative; text-align: left"
+            id="thumbnail-notice"
+            class="form-input"
+            type="button"
+            style="position: relative; text-align: left"
         >
           강의 소개하는 커버 이미지를 등록해주세요.
           <span
-            style="position: absolute; right: 20px; top: 0.75rem; color: black"
+              style="position: absolute; right: 20px; top: 0.75rem; color: black"
           >
             파일 불러오기
           </span>
         </button>
         <input
-          id="thumbnail"
-          type="file"
-          accept="image/*"
-          style="display: none"
+            id="thumbnail"
+            type="file"
+            accept="image/*"
+            style="display: none"
         />
       </div>
 
       <div
-        id="forPreview"
-        style="display: flex; justify-content: end; padding-right: 32px"
+          id="forPreview"
+          style="display: flex; justify-content: end; padding-right: 32px"
       ></div>
 
       <div class="modal-actions">
