카테고리 깜빡임 제거

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
           <div>　</div>
           <button class="create-modal-toggle-btn modal-toggle-btn" data-modal-target="createLectureModal"
-                  id="lecture-create">
+                  id="lecture-create" style="cursor: pointer;">
             강의 등록하기
           </button>
         </div>
@@ -29,7 +29,9 @@
         </div>
       </header>
       <section id="card-container" style="margin-top: 32px;"></section>
-      <section id="page-nation"></section>
+      <section style="border-top: 5px solid white; padding: 10px 10px 0; margin-top: 20px;">
+        <div id="page-nation"></div>
+      </section>
     </section>
   </div>
   <div class="modals"></div>
