--- a/src/js/ui/card/cardTemplate.html
+++ b/src/js/ui/card/cardTemplate.html
@@ -1,10 +1,10 @@
 <button
-  class="card modal-toggle-btn"
-  title="card modal-toggle-btn"
-  role="button"
-  data-modal-target="detailLecture"
+    class="card modal-toggle-btn"
+    role="button"
+    data-modal-target="detailLecture"
+    style="cursor: pointer;"
 >
-  <div class="card-thumbnail">
+  <div class=" card-thumbnail">
     <img src="" alt="thumbnail">
   </div>
   <div class="card-text">
