사이드바-로고 추가, 카드(hover시 효과적용)

--- a/src/js/ui/detailLectureModal/detailLectureModalTemplate.html
+++ b/src/js/ui/detailLectureModal/detailLectureModalTemplate.html
@@ -50,9 +50,9 @@
         <div class="form-group" style="width: 100%">
           <label for="level">난이도</label>
           <select name="categories" id="level" class="form-input">
-            <option value="upper">상</option>
-            <option value="middle">중</option>
-            <option value="lower">하</option>
+            <option value="upper">상급</option>
+            <option value="middle">중급</option>
+            <option value="lower">초급</option>
           </select>
         </div>
       </div>
