디자인 작업

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="nav-bar">
           <h1 class="main-title" style="min-width: 140px;">My 강의</h1>
-          <nav id="category-nav" class="">
+          <nav id="category-nav" class="" >
             <ul id="category-list"></ul>
             <div id="date-order-select">
             </div>
@@ -29,9 +29,7 @@
         </div>
       </header>
       <section id="card-container" style="margin-top: 32px;"></section>
-      <section style="border-top: 5px solid white; padding: 10px 10px 0; margin-top: 20px;">
-        <div id="page-nation"></div>
-      </section>
+      <section id="page-nation"></section>
     </section>
   </div>
   <div class="modals"></div>
