--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -27,7 +27,7 @@
         />
       </div>
       <div style="display: flex; ">
-        <div class="form-group" style="width: 100%">
+        <div class="form-group-2" style="width: 100%; padding-left: 40px; padding-right: 16px;">
           <label for="category">카테고리</label>
           <select name="categories" id="category" class="form-input">
             <option value="ai">AI</option>
@@ -35,7 +35,7 @@
             <option value="design">디자인</option>
           </select>
         </div>
-        <div class="form-group" style="width: 100%">
+        <div class="form-group-2" style="width: 100%; padding-right: 40px; padding-left: 16px;">
           <label for="level">난이도</label>
           <select name="categories" id="level" class="form-input">
             <option value="upper">상</option>
@@ -73,8 +73,8 @@
       ></div>
 
       <div class="modal-actions">
-        <button type="button" class="cancel-btn">취소</button>
-        <button type="submit" class="save-btn">저장</button>
+        <!--        <button type="button" class="create-modal-toggle-btn">취소하기</button>-->
+        <button type="submit" class=" create-modal-toggle-btn">저장하기</button>
       </div>
     </form>
   </div>
