--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -28,20 +28,24 @@
       </div>
       <div style="display: flex; ">
         <div class="form-group-2" style="width: 100%; padding-left: 40px; padding-right: 16px;">
+
+          <label for="level">난이도</label>
+          <select name="level" id="level" class="form-input">
+            <option value="upper">고급</option>
+            <option value="middle">중급</option>
+            <option value="lower">초급</option>
+          </select>
+
+        </div>
+        <div class="form-group-2" style="width: 100%; padding-right: 40px; padding-left: 16px;">
+
           <label for="category">카테고리</label>
           <select name="categories" id="category" class="form-input">
             <option value="ai">AI</option>
             <option value="develop">개발</option>
             <option value="design">디자인</option>
           </select>
-        </div>
-        <div class="form-group-2" style="width: 100%; padding-right: 40px; padding-left: 16px;">
-          <label for="level">난이도</label>
-          <select name="categories" id="level" class="form-input">
-            <option value="upper">상급</option>
-            <option value="middle">중급</option>
-            <option value="lower">초급</option>
-          </select>
+
         </div>
       </div>
       <div class="form-group">
