--- a/index.html
+++ b/index.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title></title>
-  <link rel="stylesheet" href="./src/css/global.css">
-</head>
-<body>
-<div class="container">
-  <div class="main-container">
-    <section id="cards-section" class="cards-section">
-      <header class="cards-header">
-        <div style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
-          <div></div>
-          <button class="create-modal-toggle-btn modal-toggle-btn" data-modal-target="createLectureModal"
-                  id="lecture-create" style="cursor: pointer;">
-            강의 등록하기
-          </button>
-        </div>
-
-        <div class="nav-bar">
-          <h1 class="main-title" style="min-width: 140px;">My 강의</h1>
-          <nav id="category-nav" class="" >
-            <ul id="category-list"></ul>
-            <div id="date-order-select">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title></title>
+    <link rel="stylesheet" href="./src/css/global.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="main-container">
+        <section id="cards-section" class="cards-section">
+          <header class="cards-header">
+            <div
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                width: 100%;
+              "
+            >
+              <div></div>
+              <button
+                class="create-modal-toggle-btn modal-toggle-btn"
+                data-modal-target="createLectureModal"
+                id="lecture-create"
+                style="cursor: pointer"
+              >
+                강의 등록하기
+              </button>
             </div>
-          </nav>
-        </div>
-      </header>
-      <section id="card-container" style="margin-top: 32px;"></section>
-      <section id="page-nation"></section>
-    </section>
-  </div>
-  <div class="modals"></div>
-</div>
 
-<script type="module" src="./src/js/layout/includeSidebar.js"></script>
-<script type="module" src="src/js/ui/card/card.js"></script>
-<script type="module" src="src/js/ui/createLectureModal/createLectureModal.js"></script>
-<script type="module" src="src/js/ui/detailLectureModal/detailLectureModal.js"></script>
-<script type="module" src="src/js/utils/openModal.js"></script>
-<script type="module" src="src/js/ui/category/category.js"></script>
-<script type="module" src="src/js/ui/card-list/cardList.js"></script>
-<script type="module" src="src/js/ui/date-order-select/dateOrderSelect.js"></script>
-<script type="module" src="src/js/ui/page-nation/pageNation.js"></script>
-</body>
+            <div class="nav-bar">
+              <h1 class="main-title" style="min-width: 140px">My 강의</h1>
+              <nav id="category-nav" class="">
+                <ul id="category-list"></ul>
+                <div id="date-order-select"></div>
+              </nav>
+            </div>
+          </header>
+          <section id="card-container" style="margin-top: 32px"></section>
+          <section id="page-nation"></section>
+        </section>
+      </div>
+      <div class="modals"></div>
+    </div>
+
+    <script type="module" src="./src/js/layout/includeSidebar.js"></script>
+    <script type="module" src="src/js/ui/card/card.js"></script>
+    <script
+      type="module"
+      src="src/js/ui/createLectureModal/createLectureModal.js"
+    ></script>
+    <script
+      type="module"
+      src="src/js/ui/detailLectureModal/detailLectureModal.js"
+    ></script>
+    <script type="module" src="src/js/utils/openModal.js"></script>
+    <script type="module" src="src/js/ui/category/category.js"></script>
+    <script type="module" src="src/js/ui/card-list/cardList.js"></script>
+    <script
+      type="module"
+      src="src/js/ui/date-order-select/dateOrderSelect.js"
+    ></script>
+    <script type="module" src="src/js/ui/page-nation/pageNation.js"></script>
+  </body>
 </html>
