--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -5,29 +5,54 @@
       <button class="modal-close">&times;</button>
     </div>
     <form id="create-form" class="modal-form">
-      <input type="hidden" id="course"/>
-      <div class="form-group">
-        <label for="lecture-name">강의명</label>
-        <input
-            type="text"
-            id="lecture-name"
-            class="form-input"
-            placeholder="강의명을 입력해주세요."
-            required
-        />
+      <input type="hidden" id="course" />
+      <div class="form-group" style="display: flex">
+        <div
+          id="forPreview"
+          style="display: flex; justify-content: end; padding-right: 32px"
+        ></div>
+        <div
+          id="forPreviewUpdate"
+          style="
+            display: flex;
+            justify-content: end;
+            padding-right: 32px;
+            width: 232px;
+            height: 164px;
+            max-height: 164px;
+          "
+        ></div>
+
+        <div style="display: flex; flex-direction: column; width: 100%">
+          <div class="form-group" style="margin-bottom: 32px; padding: 0">
+            <label for="lecture-name">강의명</label>
+            <input
+              type="text"
+              id="lecture-name"
+              class="form-input"
+              placeholder="강의명을 입력해주세요."
+              required
+            />
+          </div>
+
+          <div class="form-group" style="margin-bottom: 0; padding: 0">
+            <label for="introduce">간단 소개글</label>
+            <input
+              type="text"
+              id="introduce"
+              class="form-input"
+              placeholder="설명 글에 소개할 글을 간단하게 작성해주세요."
+              required
+            />
+          </div>
+        </div>
       </div>
-      <div class="form-group">
-        <label for="introduce">간단 소개글</label>
-        <input
-            type="text"
-            id="introduce"
-            class="form-input"
-            placeholder="설명 글에 소개할 글을 간단하게 작성해주세요."
-            required
-        />
-      </div>
-      <div style="display: flex; ">
-        <div class="form-group-2" style="width: 100%; padding-left: 40px; padding-right: 16px;">
+
+      <div style="display: flex">
+        <div
+          class="form-group-2"
+          style="width: 100%; padding-left: 40px; padding-right: 16px"
+        >
           <label for="category">카테고리</label>
           <select name="categories" id="category" class="form-input">
             <option value="ai">AI</option>
@@ -35,7 +60,10 @@
             <option value="design">디자인</option>
           </select>
         </div>
-        <div class="form-group-2" style="width: 100%; padding-right: 40px; padding-left: 16px;">
+        <div
+          class="form-group-2"
+          style="width: 100%; padding-right: 40px; padding-left: 16px"
+        >
           <label for="level">난이도</label>
           <select name="categories" id="level" class="form-input">
             <option value="upper">상급</option>
@@ -47,34 +75,29 @@
       <div class="form-group">
         <label for="thumbnail">미디어 파일</label>
         <button
-            id="thumbnail-notice"
-            class="form-input"
-            type="button"
-            style="position: relative; text-align: left"
+          id="thumbnail-notice"
+          class="form-input"
+          type="button"
+          style="position: relative; text-align: left"
         >
           강의 소개하는 커버 이미지를 등록해주세요.
           <span
-              style="position: absolute; right: 20px; top: 0.75rem; color: black"
+            style="position: absolute; right: 20px; top: 0.75rem; color: black"
           >
             파일 불러오기
           </span>
         </button>
         <input
-            id="thumbnail"
-            type="file"
-            accept="image/*"
-            style="display: none"
+          id="thumbnail"
+          type="file"
+          accept="image/*"
+          style="display: none"
         />
       </div>
 
-      <div
-          id="forPreview"
-          style="display: flex; justify-content: end; padding-right: 32px"
-      ></div>
-
       <div class="modal-actions">
         <!--        <button type="button" class="create-modal-toggle-btn">취소하기</button>-->
-        <button type="submit" class=" create-modal-toggle-btn">저장하기</button>
+        <button type="submit" class="create-modal-toggle-btn">저장하기</button>
       </div>
     </form>
   </div>
