--- a/src/js/ui/detailLectureModal/detailLectureModalTemplate.html
+++ b/src/js/ui/detailLectureModal/detailLectureModalTemplate.html
@@ -8,39 +8,46 @@
     <form id="update-form" class="modal-form">
       <div class="form-group" style="display: flex">
         <div
-            id="forPreviewUpdate"
-            style="display: flex; justify-content: end; padding-right: 32px; width:232px;height: 164px;max-height: 164px;"
-        >
-        </div>
-        <div
-            style="display: flex; flex-direction: column; width: 70%;"
-        >
-          <div class="form-group" style="margin-bottom: 32px; padding:0;">
+          id="forPreviewUpdate"
+          style="
+            display: flex;
+            justify-content: end;
+            padding-right: 32px;
+            width: 232px;
+            height: 164px;
+            max-height: 164px;
+          "
+        ></div>
+        <div style="display: flex; flex-direction: column; width: 70%">
+          <div class="form-group" style="margin-bottom: 32px; padding: 0">
             <label for="lecture-name">강의명</label>
             <input
-                type="text"
-                id="lecture-name"
-                class="form-input"
-                placeholder="강의명을 입력해주세요."
-                required
+              type="text"
+              id="lecture-name"
+              class="form-input"
+              placeholder="강의명을 입력해주세요."
+              required
             />
           </div>
 
-          <div class="form-group" style="margin-bottom: 0;padding:0;">
+          <div class="form-group" style="margin-bottom: 0; padding: 0">
             <label for="introduce">간단 소개글</label>
             <input
-                type="text"
-                id="introduce"
-                class="form-input"
-                placeholder="설명 글에 소개할 글을 간단하게 작성해주세요."
-                required
+              type="text"
+              id="introduce"
+              class="form-input"
+              placeholder="설명 글에 소개할 글을 간단하게 작성해주세요."
+              required
             />
           </div>
         </div>
       </div>
 
-      <div style="display: flex;">
-        <div class="form-group-2" style="width: 100%; padding-left: 40px; padding-right: 16px;">
+      <div style="display: flex">
+        <div
+          class="form-group-2"
+          style="width: 100%; padding-left: 40px; padding-right: 16px"
+        >
           <label for="category">카테고리</label>
           <select name="categories" id="category" class="form-input">
             <option value="ai">AI</option>
@@ -48,7 +55,10 @@
             <option value="design">디자인</option>
           </select>
         </div>
-        <div class="form-group-2" style="width: 100%; padding-right: 40px; padding-left: 16px;">
+        <div
+          class="form-group-2"
+          style="width: 100%; padding-right: 40px; padding-left: 16px"
+        >
           <label for="level">난이도</label>
           <select name="categories" id="level" class="form-input">
             <option value="upper">상급</option>
@@ -59,30 +69,37 @@
       </div>
       <div class="form-group">
         <button
-            id="thumbnail-notice-update"
-            class="form-input"
-            type="button"
-            style="position: relative; text-align: left"
+          id="thumbnail-notice-update"
+          class="form-input"
+          type="button"
+          style="position: relative; text-align: left"
         >
           강의 소개하는 커버 이미지를 등록해주세요.
           <span
-              style="position: absolute; right: 20px; top: 0.75rem; color: black"
+            style="position: absolute; right: 20px; top: 0.75rem; color: black"
           >
             파일 불러오기
           </span>
         </button>
         <input
-            id="thumbnail-update"
-            type="file"
-            accept="image/*"
-            style="display: none"
+          id="thumbnail-update"
+          type="file"
+          accept="image/*"
+          style="display: none"
         />
       </div>
 
       <div class="modal-actions">
-        <button type="submit" class="create-modal-toggle-btn" style="background-color: #E2E2E2; color: black;">삭제하기
+        <button
+          type="button"
+          class="create-modal-toggle-btn delete-btn"
+          style="background-color: #e2e2e2; color: black"
+        >
+          삭제하기
         </button>
-        <button type="submit" class="create-modal-toggle-btn">수정하기</button>
+        <button type="submit" class="create-modal-toggle-btn edit-btn">
+          수정하기
+        </button>
       </div>
     </form>
   </div>
