리스트 체인지

--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -40,7 +40,7 @@
         <div class="form-group-2" style="width: 100%; padding-right: 40px; padding-left: 16px;">
 
           <label for="category">카테고리</label>
-          <select name="categories" id="category" class="form-input">
+          <select name="category" id="category" class="form-input">
             <option value="ai">AI</option>
             <option value="develop">개발</option>
             <option value="design">디자인</option>
