--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <section id="cards-section" class="cards-section">
       <header class="cards-header">
         <div style="display: flex; align-items: center; justify-content: space-between; width: 100%;">
-          <div></div>
+          <div>　</div>
           <button class="create-modal-toggle-btn modal-toggle-btn" data-modal-target="createLectureModal"
-                  id="lecture-create" style="cursor: pointer;">
+                  id="lecture-create">
             강의 등록하기
           </button>
         </div>
 
         <div class="nav-bar">
           <h1 class="main-title" style="min-width: 140px;">My 강의</h1>
-          <nav id="category-nav" class="" >
+          <nav id="category-nav" class="">
             <ul id="category-list"></ul>
             <div id="date-order-select">
             </div>
