--- a/src/js/ui/not-found/notFoundTemplate.html
+++ b/src/js/ui/not-found/notFoundTemplate.html
@@ -7,7 +7,7 @@
 <!--</div>-->
 
 <div id="card-empty"
-     style="width: 100%; display: flex; flex-direction: column; min-height: 550px; gap: 15px;height: 100%; align-items: center; justify-content: center;">
+     style="width: 100%; display: flex; flex-direction: column; position:absolute; min-height: 550px; gap: 15px;height: 100%; align-items: center; justify-content: center;">
   <div class="card-empty__icon" aria-hidden="true"></div>
   <div style="text-align: center;">
     <h3 class="card-empty__title">등록된 강의가 없습니다</h3>
