--- a/src/js/ui/createLectureModal/createLectureModalTemplate.html
+++ b/src/js/ui/createLectureModal/createLectureModalTemplate.html
@@ -7,17 +7,19 @@
     <form id="create-form" class="modal-form">
       <div class="form-group" style="display: flex">
         <div id="forPreview" style="display: flex; justify-content: end; padding-right: 32px">
-          <img id="preview-box" src="/src/img/img_class_thumbnail_no.svg" style="height: 164px; width: 232px;" alt="이미지 없음" />
+          <img id="preview-box" src="/src/img/img_class_thumbnail_no.svg" style="height: 164px; width: 232px;"
+               alt="이미지 없음"/>
         </div>
         <div style="display: flex; flex-direction: column; width: 70%;">
           <div class="form-group" style="margin-bottom: 32px; padding:0;">
             <label for="lecture-name">강의명</label>
-            <input type="text" id="lecture-name" class="form-input" placeholder="강의명을 입력해주세요." required />
+            <input type="text" id="lecture-name" maxlength="20" class="form-input" placeholder="강의명을 입력해주세요." required/>
           </div>
 
           <div class="form-group" style="margin-bottom: 0;padding:0;">
             <label for="introduce">간단 소개글</label>
-            <input type="text" id="introduce" class="form-input" placeholder="설명 글에 소개할 글을 간단하게 작성해주세요." required />
+            <input type="text" id="introduce" maxlength="20" class="form-input" placeholder="설명 글에 소개할 글을 간단하게 작성해주세요."
+                   required/>
           </div>
         </div>
       </div>
